# setup-environment-marcosraimondi1

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
.github/workflows/: QAWorkflow.yml
include/: div.h  greetings.h  prod.h
lib/libdyn/: CMakeLists.txt
lib/libdyn/include/: sum.h
lib/libdyn/src/: sum.c
lib/libsta/: CMakeLists.txt
lib/libsta/include/: resta.h  substraction.h
lib/libsta/src/: resta.c  substraction.c
src/: div.c  greetings.c  main.c  prod.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
